# pretix-congressschedule

./: .update-locales  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
pretix_congressschedule/: api.py  apps.py  signals.py  urls.py
pretix_congressschedule/locale/: django.pot  djangojs.pot
pretix_congressschedule/locale/de/LC_MESSAGES/: django.po  djangojs.po
pretix_congressschedule/locale/de_Informal/LC_MESSAGES/: django.po  djangojs.po
